# lambda-web-adapter-fastapi

./: .gitignore  README.md  pyproject.toml  template.yaml
app/: Dockerfile  main.py  requirements.txt
app/templates/: index.html
