[tool.poetry]
name = "lambda-web-adapter-fastapi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "lambda_web_adapter_fastapi"}]

[tool.poetry.dependencies]
python = "3.8.12"
fastapi = "0.95.2"
jinja2 = "^3.1.2"
uvicorn = "0.20.0"


[tool.poetry.group.dev.dependencies]
aws-sam-cli = "^1.97.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
